--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.6.0",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
+    "solid-styled-components": "^0.28.5",
     "undici": "^5.15.1"
   },
   "engines": {
