--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
     "graphql": "^16.6.0",
+    "solid-bootstrap": "^1.0.13",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
     "solid-styled-components": "^0.28.5",
